test/ll_parser_input_test.test
LINE_BREAK: line 0:
// Layers Language Standard Lexical Analyzer Test Data
                                                      ^
LINE_BREAK: line 1:
//
  ^
LINE_BREAK: line 2:
// File:        ll_lexeme_standard_test.in
                                          ^
LINE_BREAK: line 3:
// Author:      Bob Walton (walton@acm.org)
                                           ^
LINE_BREAK: line 4:
// Date:        Sun Mar  6 02:00:05 EST 2011
                                            ^
LINE_BREAK: line 5:
//
  ^
LINE_BREAK: line 6:
// The authors have placed this data in the public
                                                  ^
LINE_BREAK: line 7:
// domain; they make no warranty and accept no liability
                                                        ^
LINE_BREAK: lines 8-9:
// for this data.
                 ^
<BLANK-LINE>
^
WORD: abc: line 10:
abc 3.4+z (x,y)
^^^
NUMBER: 3.4: line 10:
abc 3.4+z (x,y)
    ^^^
MARK: +: line 10:
abc 3.4+z (x,y)
       ^
WORD: z: line 10:
abc 3.4+z (x,y)
        ^
SEPARATOR: (: line 10:
abc 3.4+z (x,y)
          ^
WORD: x: line 10:
abc 3.4+z (x,y)
           ^
SEPARATOR: ,: line 10:
abc 3.4+z (x,y)
            ^
WORD: y: line 10:
abc 3.4+z (x,y)
             ^
SEPARATOR: ): line 10:
abc 3.4+z (x,y)
              ^
LINE_BREAK: line 10:
abc 3.4+z (x,y)
               ^
QUOTED_STRING: hi: line 11:
"hi" "ho<HT>x y<>z<LF>"
^^^^
QUOTED_STRING: ho␉x␣y<>z␤: line 11:
"hi" "ho<HT>x y<>z<LF>"
     ^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 11:
"hi" "ho<HT>x y<>z<LF>"
                       ^
WORD: 'tis: line 12:
'tis noth'ng `but' a h'dache.
^^^^
WORD: noth'ng: line 12:
'tis noth'ng `but' a h'dache.
     ^^^^^^^
SEPARATOR: `: line 12:
'tis noth'ng `but' a h'dache.
             ^
WORD: but: line 12:
'tis noth'ng `but' a h'dache.
              ^^^
SEPARATOR: ': line 12:
'tis noth'ng `but' a h'dache.
                 ^
WORD: a: line 12:
'tis noth'ng `but' a h'dache.
                   ^
WORD: h'dache: line 12:
'tis noth'ng `but' a h'dache.
                     ^^^^^^^
MARK: .: line 12:
'tis noth'ng `but' a h'dache.
                            ^
LINE_BREAK: line 12:
'tis noth'ng `but' a h'dache.
                             ^
WORD: a: line 13:
a.1.2.3.b.c e5f x7+y6(5z)
^
NUMBER: .1.2.3: line 13:
a.1.2.3.b.c e5f x7+y6(5z)
 ^^^^^^
MARK: .: line 13:
a.1.2.3.b.c e5f x7+y6(5z)
       ^
WORD: b: line 13:
a.1.2.3.b.c e5f x7+y6(5z)
        ^
MARK: .: line 13:
a.1.2.3.b.c e5f x7+y6(5z)
         ^
WORD: c: line 13:
a.1.2.3.b.c e5f x7+y6(5z)
          ^
WORD: e: line 13:
a.1.2.3.b.c e5f x7+y6(5z)
            ^
NATURAL_NUMBER: 5: line 13:
a.1.2.3.b.c e5f x7+y6(5z)
             ^
WORD: f: line 13:
a.1.2.3.b.c e5f x7+y6(5z)
              ^
WORD: x: line 13:
a.1.2.3.b.c e5f x7+y6(5z)
                ^
NATURAL_NUMBER: 7: line 13:
a.1.2.3.b.c e5f x7+y6(5z)
                 ^
MARK: +: line 13:
a.1.2.3.b.c e5f x7+y6(5z)
                  ^
WORD: y: line 13:
a.1.2.3.b.c e5f x7+y6(5z)
                   ^
NATURAL_NUMBER: 6: line 13:
a.1.2.3.b.c e5f x7+y6(5z)
                    ^
SEPARATOR: (: line 13:
a.1.2.3.b.c e5f x7+y6(5z)
                     ^
NATURAL_NUMBER: 5: line 13:
a.1.2.3.b.c e5f x7+y6(5z)
                      ^
WORD: z: line 13:
a.1.2.3.b.c e5f x7+y6(5z)
                       ^
SEPARATOR: ): line 13:
a.1.2.3.b.c e5f x7+y6(5z)
                        ^
LINE_BREAK: line 13:
a.1.2.3.b.c e5f x7+y6(5z)
                         ^
NUMBER: 12.3: line 14:
12.3 .4 5. 6/7
^^^^
NUMBER: .4: line 14:
12.3 .4 5. 6/7
     ^^
NATURAL_NUMBER: 5: line 14:
12.3 .4 5. 6/7
        ^
MARK: .: line 14:
12.3 .4 5. 6/7
         ^
NUMBER: 6/7: line 14:
12.3 .4 5. 6/7
           ^^^
LINE_BREAK: line 14:
12.3 .4 5. 6/7
              ^
NUMBER: 1,23,456: line 15:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
^^^^^^^^
NUMBER: 1,234/6,789: line 15:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
         ^^^^^^^^^^^
NUMBER: 1/2/3/4,5/6,7,8/9: line 15:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
                     ^^^^^^^^^^^^^^^^^
NUMBER: 8888.12,3,4: line 15:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
                                       ^^^^^^^^^^^
LINE_BREAK: line 15:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
                                                  ^
MARK: /: line 16:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
^
NATURAL_NUMBER: 3: line 16:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
 ^
NUMBER: 6.34.56: line 16:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
   ^^^^^^^
MARK: /: line 16:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
          ^
NATURAL_NUMBER: 3: line 16:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
            ^
SEPARATOR: ,: line 16:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
             ^
NATURAL_NUMBER: 4: line 16:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
               ^
SEPARATOR: ,: line 16:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
                ^
SEPARATOR: ,: line 16:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
                  ^
NATURAL_NUMBER: 5: line 16:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
                   ^
SEPARATOR: ,: line 16:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
                     ^
NUMBER: 6.7,8.9: line 16:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
                      ^^^^^^^
LINE_BREAK: line 16:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9
                             ^
MARK: +-*~@#$%^&=|<>_!?:: line 17:
+-*~@#$%^&=|<>_!?:"foo"x<79><05><lf>
^^^^^^^^^^^^^^^^^^
QUOTED_STRING: foo: line 17:
+-*~@#$%^&=|<>_!?:"foo"x<79><05><lf>
                  ^^^^^
ERROR: ascii escape sequence; line 17:
+-*~@#$%^&=|<>_!?:"foo"x<79><05><lf>
                        ^^^^
ERROR: ascii escape sequence; line 17:
+-*~@#$%^&=|<>_!?:"foo"x<79><05><lf>
                            ^^^^
WORD: x: line 17:
+-*~@#$%^&=|<>_!?:"foo"x<79><05><lf>
                       ^^^^^^^^^
MARK: <: line 17:
+-*~@#$%^&=|<>_!?:"foo"x<79><05><lf>
                                ^
WORD: lf: line 17:
+-*~@#$%^&=|<>_!?:"foo"x<79><05><lf>
                                 ^^
MARK: >: line 17:
+-*~@#$%^&=|<>_!?:"foo"x<79><05><lf>
                                   ^
LINE_BREAK: line 17:
+-*~@#$%^&=|<>_!?:"foo"x<79><05><lf>
                                    ^
MARK: .: line 18:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
^
WORD: foo: line 18:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
 ^^^
MARK: /: line 18:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
     ^
WORD: foo: line 18:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
      ^^^
NATURAL_NUMBER: 3: line 18:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
          ^
MARK: /: line 18:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
           ^
WORD: x: line 18:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
            ^
WORD: x: line 18:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
              ^
MARK: /: line 18:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
               ^
NATURAL_NUMBER: 3: line 18:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
                ^
NATURAL_NUMBER: 3: line 18:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
                  ^
MARK: .: line 18:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
                   ^
WORD: x: line 18:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
                    ^
WORD: x: line 18:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
                      ^
NUMBER: .3: line 18:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
                       ^^
LINE_BREAK: line 18:
.foo /foo 3/x x/3 3.x x.3// comment <89> "'
                                           ^
WORD: a: line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
^
SEPARATOR: (: line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
 ^
WORD: b: line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
  ^
SEPARATOR: ,: line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
   ^
WORD: c: line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
    ^
SEPARATOR: ): line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
     ^
WORD: d: line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
       ^
SEPARATOR: {: line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
        ^
WORD: e: line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
         ^
SEPARATOR: ;: line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
          ^
WORD: f: line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
           ^
SEPARATOR: }: line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
            ^
WORD: g: line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
              ^
SEPARATOR: [: line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
               ^
WORD: h: line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                ^
SEPARATOR: ,: line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                 ^
WORD: i: line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                  ^
SEPARATOR: ]: line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                   ^
SEPARATOR: `: line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                     ^
SEPARATOR: `: line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                      ^
WORD: foobar: line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                       ^^^^^^
SEPARATOR: ': line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                             ^
WORD: fum: line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                               ^^^
SEPARATOR: ': line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                                  ^
LINE_BREAK: line 19:
a(b,c) d{e;f} g[h,i] ``foobar' fum'
                                   ^
LINE_BREAK: line 20:
// form feed ␌
             ^
LINE_BREAK: line 21:
// vertical tab ␋
                ^
LINE_BREAK: line 22:
// carriage return ␍
                   ^
WORD: z: line 23:
z       x // horizontal tab
^
WORD: x: line 23:
z       x // horizontal tab
        ^
LINE_BREAK: line 23:
z       x // horizontal tab
                           ^
WORD: all: line 24:
all     ␌␋␍
^^^
LINE_BREAK: line 24:
all     ␌␋␍
        ^^^
WORD: control: line 25:
control A␁B␂C␃
^^^^^^^
WORD: A: line 25:
control A␁B␂C␃
        ^
ERROR: misplaced character; line 25:
control A␁B␂C␃
         ^
WORD: B: line 25:
control A␁B␂C␃
          ^
ERROR: misplaced character; line 25:
control A␁B␂C␃
           ^
WORD: C: line 25:
control A␁B␂C␃
            ^
ERROR: misplaced character; line 25:
control A␁B␂C␃
             ^
LINE_BREAK: line 25:
control A␁B␂C␃
              ^
ERROR: unrecognized escape sequence; line 26:
"<Q><LF><CR><HT><BS><FF><VT><XX><SP>"
                            ^^^^
QUOTED_STRING: "␤␍␉␈␌␋␣: line 26:
"<Q><LF><CR><HT><BS><FF><VT><XX><SP>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 26:
"<Q><LF><CR><HT><BS><FF><VT><XX><SP>"
                                     ^
ERROR: ascii escape sequence; line 27:
<0041><00000042>C D<00000045><0046>G
^^^^^^
ERROR: ascii escape sequence; line 27:
<0041><00000042>C D<00000045><0046>G
      ^^^^^^^^^^
WORD: C: line 27:
<0041><00000042>C D<00000045><0046>G
                ^
ERROR: ascii escape sequence; line 27:
<0041><00000042>C D<00000045><0046>G
                   ^^^^^^^^^^
ERROR: ascii escape sequence; line 27:
<0041><00000042>C D<00000045><0046>G
                             ^^^^^^
WORD: DG: line 27:
<0041><00000042>C D<00000045><0046>G
                  ^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 27:
<0041><00000042>C D<00000045><0046>G
                                    ^
ERROR: ascii escape sequence; line 28:
<0041><00000002>C D<00000045><0006>G
^^^^^^
ERROR: ascii escape sequence; line 28:
<0041><00000002>C D<00000045><0006>G
      ^^^^^^^^^^
WORD: C: line 28:
<0041><00000002>C D<00000045><0006>G
                ^
ERROR: ascii escape sequence; line 28:
<0041><00000002>C D<00000045><0006>G
                   ^^^^^^^^^^
ERROR: ascii escape sequence; line 28:
<0041><00000002>C D<00000045><0006>G
                             ^^^^^^
WORD: DG: line 28:
<0041><00000002>C D<00000045><0006>G
                  ^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 28:
<0041><00000002>C D<00000045><0006>G
                                    ^
ERROR: ascii escape sequence; line 29:
<0001><00000042>C <00000004>E<0046>G
^^^^^^
ERROR: ascii escape sequence; line 29:
<0001><00000042>C <00000004>E<0046>G
      ^^^^^^^^^^
WORD: C: line 29:
<0001><00000042>C <00000004>E<0046>G
                ^
ERROR: ascii escape sequence; line 29:
<0001><00000042>C <00000004>E<0046>G
                  ^^^^^^^^^^
ERROR: ascii escape sequence; line 29:
<0001><00000042>C <00000004>E<0046>G
                             ^^^^^^
WORD: EG: line 29:
<0001><00000042>C <00000004>E<0046>G
                            ^^^^^^^^
LINE_BREAK: line 29:
<0001><00000042>C <00000004>E<0046>G
                                    ^
ERROR: ascii escape sequence; line 30:
<0001>
^^^^^^
LINE_BREAK: line 30:
<0001>
      ^
QUOTED_STRING: ␀␁␂␃␄␅␆␇: line 31:
"<NUL><SOH><STX><ETX><EOT><ENQ><ACK><BEL>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 31:
"<NUL><SOH><STX><ETX><EOT><ENQ><ACK><BEL>"
                                          ^
QUOTED_STRING: ␈␉␤␤␋␌␍␎␏: line 32:
"<BS><HT><LF><NL><VT><FF><CR><SO><SI>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 32:
"<BS><HT><LF><NL><VT><FF><CR><SO><SI>"
                                      ^
QUOTED_STRING: ␐␑␒␓␔␕␖␗: line 33:
"<DLE><DC1><DC2><DC3><DC4><NAK><SYN><ETB>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 33:
"<DLE><DC1><DC2><DC3><DC4><NAK><SYN><ETB>"
                                          ^
QUOTED_STRING: ␘␙␚␛␜␝␞␟␡: line 34:
"<CAN><EM><SUB><ESC><FS><GS><RS><US><DEL>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE_BREAK: line 34:
"<CAN><EM><SUB><ESC><FS><GS><RS><US><DEL>"
                                          ^
END_OF_FILE: line 35:
<END-OF-FILE>
^
